[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/Enemies/Skeleton/Attack.png" type="Texture" id=1]
[ext_resource path="res://assets/Enemies/Skeleton/Walk.png" type="Texture" id=2]
[ext_resource path="res://src/Actors/Enemy/Skeleton.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 12, 23.5 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 24.5, 20 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 23.5, 30.5 )

[node name="Skeleton" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -11, 1 )
shape = SubResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
animation = "walk"
frame = 1
speed_scale = 2.0
playing = true
flip_h = true

[node name="SwordArea2D" type="Area2D" parent="."]

[node name="SwordCollisionShape2D" type="CollisionShape2D" parent="SwordArea2D"]
position = Vector2( -44, -7 )
shape = SubResource( 15 )
disabled = true

[node name="PlayerNearArea2D" type="Area2D" parent="."]

[node name="PlayerNearCollisionShape2D" type="CollisionShape2D" parent="PlayerNearArea2D"]
position = Vector2( -17.5, -1 )
shape = SubResource( 16 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[connection signal="body_entered" from="PlayerNearArea2D" to="." method="_on_PlayerNearArea2D_body_entered"]
